--- a/mybuild/issues/templates/issues/remark_detail.html
+++ b/mybuild/issues/templates/issues/remark_detail.html
@@ -34,7 +34,7 @@
         <div class="lg:col-span-2 space-y-6">
           <!-- Description -->
           <div>
-            <h3 class="text-lg font-semibold text-gray-900 mb-3">Описание замечания</h3>
+            <h3 class="text-lg font-semibold text-gray-900 mb-3">Описание нарушения</h3>
             <div class="bg-gray-50 rounded-lg p-4">
               <p class="text-gray-700 whitespace-pre-wrap">{{ remark.description }}</p>
             </div>
@@ -47,7 +47,7 @@
               <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                 {% for photo in remark.photos.all %}
                   <div class="aspect-square bg-gray-100 rounded-lg overflow-hidden">
-                    <img src="{{ photo.file.url }}" alt="Фото замечания" class="w-full h-full object-cover">
+                    <img src="{{ photo.file.url }}" alt="Фото нарушения" class="w-full h-full object-cover">
                   </div>
                 {% endfor %}
               </div>
