--- a/mybuild/issues/templates/issues/remark_form.html
+++ b/mybuild/issues/templates/issues/remark_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Новое замечание - Alpha Build{% endblock %}
-{% block page_heading %}Новое замечание{% endblock %}
-{% block page_subtitle %}Регистрация нарушения или замечания по объекту "{{ object.name }}"{% endblock %}
+{% block title %}Новое нарушение - Alpha Build{% endblock %}
+{% block page_heading %}Новое нарушение{% endblock %}
+{% block page_subtitle %}Регистрация нарушения по объекту "{{ object.name }}"{% endblock %}
 
 {% block content %}
 <!-- Breadcrumb -->
@@ -14,11 +14,11 @@
   <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
     <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
   </svg>
-  <a href="/objects/{{ object.id }}/?tab=remarks" class="hover:text-primary-600 transition-colors">Замечания</a>
+  <a href="/objects/{{ object.id }}/?tab=remarks" class="hover:text-primary-600 transition-colors">Нарушения</a>
   <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
     <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
   </svg>
-  <span class="text-gray-900 font-medium">Новое замечание</span>
+  <span class="text-gray-900 font-medium">Новое нарушение</span>
 </nav>
 
 <!-- Form Container -->
@@ -33,7 +33,7 @@
           </svg>
         </div>
         <div>
-          <h2 class="text-lg font-semibold text-gray-900">Регистрация замечания</h2>
+          <h2 class="text-lg font-semibold text-gray-900">Регистрация нарушения</h2>
           <p class="text-sm text-gray-600">Добавление информации о нарушении или проблеме</p>
         </div>
       </div>
@@ -69,7 +69,7 @@
               {{ form.category.errors.0 }}
             </div>
           {% endif %}
-          <p class="text-xs text-gray-500">Выберите подходящую категорию для классификации замечания</p>
+          <p class="text-xs text-gray-500">Выберите подходящую категорию для классификации нарушения</p>
         </div>
 
         <!-- Severity Field -->
@@ -144,7 +144,7 @@
             <svg class="w-4 h-4 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 20 20">
               <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
             </svg>
-            Сохранить замечание
+            Сохранить нарушение
           </button>
         </div>
       </form>
