--- a/mybuild/objects/templates/objects/detail.html
+++ b/mybuild/objects/templates/objects/detail.html
@@ -333,7 +333,7 @@
                 <tr class="hover:bg-gray-50 transition-colors duration-200">
                   <td class="px-6 py-4">
                     <div class="text-sm font-medium text-gray-900">
-                      <a href="{% url 'issues:remark_detail' r.id %}" class="text-primary-600 hover:text-primary-800">{{ r.category.title }}</a>
+                      <a href="{% url 'issues:remark_detail' r.id %}" class="text-primary-600 hover:text-primary-800">{{ r.category }}</a>
                     </div>
                     <div class="text-xs text-gray-500">{{ r.description|truncatechars:50 }}</div>
                   </td>
