--- a/mybuild/issues/templates/issues/remark_detail.html
+++ b/mybuild/issues/templates/issues/remark_detail.html
@@ -64,7 +64,8 @@
           </div>
 
           <!-- Actions -->
-          {% if is_foreman and (remark.status == 'OPEN' or remark.status == 'IN_PROGRESS') %}
+          {% if is_foreman %}
+            {% if remark.status == 'OPEN' or remark.status == 'IN_PROGRESS' %}
             <div class="bg-blue-50 rounded-lg p-4">
               <h4 class="font-medium text-blue-900 mb-2">Действия прораба</h4>
               <form method="post" action="{% url 'issues:confirm_resolution' remark.pk %}">
@@ -77,6 +78,7 @@
                 </button>
               </form>
             </div>
+            {% endif %}
           {% elif is_client and remark.status == 'PENDING_CONFIRMATION' %}
             <div class="bg-green-50 rounded-lg p-4">
               <h4 class="font-medium text-green-900 mb-2">Действия заказчика</h4>
