--- a/mybuild/objects/templates/objects/detail.html
+++ b/mybuild/objects/templates/objects/detail.html
@@ -320,6 +320,14 @@
           </svg>
           Нарушения
         </h2>
+        {% if can_create_remark %}
+          <a href="{% url 'issues:remark_new' object.id %}" class="inline-flex items-center gap-2 px-4 py-2 bg-danger-500 text-white rounded-xl hover:bg-danger-600 transition-all duration-200 font-medium group">
+            <svg class="w-4 h-4 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path>
+            </svg>
+            Добавить нарушение
+          </a>
+        {% endif %}
       </div>
       
       <div class="overflow-hidden rounded-xl border border-gray-200">
